add subActivity action

--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -8,9 +8,13 @@
 
     <Button
         android:id="@+id/mbutton"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="明示的Intent"
+        app:layout_goneMarginTop="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/abutton"
        />
 
     <Button
@@ -18,6 +22,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="暗黙的Intent"
-        app:layout_constraintTop_toBottomOf="@+id/mbutton"
+        app:layout_constraintStart_toEndOf="@+id/mbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintTop_toBottomOf="@id/abutton"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/button1"
+        app:layout_constraintTop_toBottomOf="@id/mbutton"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
